buildoutput.txt
ninja: Entering directory `./build/'
[1/2] Building C object CMakeFiles/OwlSatOS.dir/freertos/portable/ThirdParty/Community-Supported-Ports/GCC/RP2350_ARM_NTZ/non_secure/port.c.obj
FAILED: [code=1] CMakeFiles/OwlSatOS.dir/freertos/portable/ThirdParty/Community-Supported-Ports/GCC/RP2350_ARM_NTZ/non_secure/port.c.obj 
C:\Users\Andy\.pico-sdk\toolchain\14_2_Rel1\bin\arm-none-eabi-gcc.exe -DFREE_RTOS_KERNEL_SMP=1 -DLIB_BOOT_STAGE2_HEADERS=1 -DLIB_FREERTOS_KERNEL=1 -DLIB_PICO_ATOMIC=1 -DLIB_PICO_BIT_OPS=1 -DLIB_PICO_BIT_OPS_PICO=1 -DLIB_PICO_CLIB_INTERFACE=1 -DLIB_PICO_CRT0=1 -DLIB_PICO_CXX_OPTIONS=1 -DLIB_PICO_DIVIDER=1 -DLIB_PICO_DIVIDER_COMPILER=1 -DLIB_PICO_DOUBLE=1 -DLIB_PICO_DOUBLE_PICO=1 -DLIB_PICO_FLASH=1 -DLIB_PICO_FLOAT=1 -DLIB_PICO_FLOAT_PICO=1 -DLIB_PICO_FLOAT_PICO_VFP=1 -DLIB_PICO_INT64_OPS=1 -DLIB_PICO_INT64_OPS_COMPILER=1 -DLIB_PICO_MALLOC=1 -DLIB_PICO_MEM_OPS=1 -DLIB_PICO_MEM_OPS_COMPILER=1 -DLIB_PICO_MULTICORE=1 -DLIB_PICO_NEWLIB_INTERFACE=1 -DLIB_PICO_PLATFORM=1 -DLIB_PICO_PLATFORM_COMMON=1 -DLIB_PICO_PLATFORM_COMPILER=1 -DLIB_PICO_PLATFORM_PANIC=1 -DLIB_PICO_PLATFORM_SECTIONS=1 -DLIB_PICO_PRINTF=1 -DLIB_PICO_PRINTF_PICO=1 -DLIB_PICO_RUNTIME=1 -DLIB_PICO_RUNTIME_INIT=1 -DLIB_PICO_STANDARD_BINARY_INFO=1 -DLIB_PICO_STANDARD_LINK=1 -DLIB_PICO_STDIO=1 -DLIB_PICO_STDLIB=1 -DLIB_PICO_SYNC=1 -DLIB_PICO_SYNC_CRITICAL_SECTION=1 -DLIB_PICO_SYNC_MUTEX=1 -DLIB_PICO_SYNC_SEM=1 -DLIB_PICO_TIME=1 -DLIB_PICO_TIME_ADAPTER=1 -DLIB_PICO_UTIL=1 -DPICO_32BIT=1 -DPICO_BOARD=\"pico2\" -DPICO_BUILD=1 -DPICO_CMAKE_BUILD_TYPE=\"Debug\" -DPICO_CONFIG_RTOS_ADAPTER_HEADER=E:/OwlSat/OwlSatOS/freertos/portable/ThirdParty/Community-Supported-Ports/GCC/RP2350_ARM_NTZ/non_secure/freertos_sdk_config.h -DPICO_COPY_TO_RAM=0 -DPICO_CXX_ENABLE_EXCEPTIONS=0 -DPICO_NO_FLASH=0 -DPICO_NO_HARDWARE=0 -DPICO_ON_DEVICE=1 -DPICO_PROGRAM_NAME=\"OwlSatOS\" -DPICO_PROGRAM_VERSION_STRING=\"0.1\" -DPICO_RP2350=1 -DPICO_TARGET_NAME=\"OwlSatOS\" -DPICO_USE_BLOCKED_RAM=0 -IE:/OwlSat/OwlSatOS -IE:/OwlSat/OwlSatOS/freertos/include -IE:/OwlSat/OwlSatOS/freertos/portable/ThirdParty/Community-Supported-Ports/GCC/RP2350_ARM_NTZ/non_secure -IE:/OwlSat/OwlSatOS/include -IC:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_atomic/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/pico_stdlib_headers/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_gpio/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/pico_base_headers/include -isystem E:/OwlSat/OwlSatOS/build/generated/pico_base -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/boards/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2350/pico_platform/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2350/hardware_regs/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_base/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_platform_common/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_platform_compiler/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_platform_panic/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_platform_sections/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_dcp/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2350/hardware_structs/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_rcp/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/hardware_claim/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_sync/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_sync_spin_lock/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_irq/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_uart/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_resets/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_clocks/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_pll/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_vreg/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_watchdog/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_ticks/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_bootrom/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/boot_picoboot_headers/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/boot_bootrom_headers/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_boot_lock/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_flash/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/pico_time/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_timer/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/pico_sync/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/pico_util/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_time_adapter/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_xosc/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_divider/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_runtime/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_runtime_init/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/pico_bit_ops_headers/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/pico_divider_headers/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_double/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_float/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_malloc/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/pico_binary_info/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_printf/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_stdio/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/pico_multicore/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/common/boot_picobin_headers/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2350/boot_stage2/include -isystem C:/Users/Andy/.pico-sdk/sdk/2.2.0/src/rp2_common/hardware_exception/include -mcpu=cortex-m33 -mthumb -march=armv8-m.main+fp+dsp -mfloat-abi=softfp -mcmse -Og -g -std=gnu11 -ffunction-sections -fdata-sections -MD -MT CMakeFiles/OwlSatOS.dir/freertos/portable/ThirdParty/Community-Supported-Ports/GCC/RP2350_ARM_NTZ/non_secure/port.c.obj -MF CMakeFiles\OwlSatOS.dir\freertos\portable\ThirdParty\Community-Supported-Ports\GCC\RP2350_ARM_NTZ\non_secure\port.c.obj.d -o CMakeFiles/OwlSatOS.dir/freertos/portable/ThirdParty/Community-Supported-Ports/GCC/RP2350_ARM_NTZ/non_secure/port.c.obj -c E:/OwlSat/OwlSatOS/freertos/portable/ThirdParty/Community-Supported-Ports/GCC/RP2350_ARM_NTZ/non_secure/port.c
E:/OwlSat/OwlSatOS/freertos/portable/ThirdParty/Community-Supported-Ports/GCC/RP2350_ARM_NTZ/non_secure/port.c: In function 'prvDoorbellInterruptHandler':
E:/OwlSat/OwlSatOS/freertos/portable/ThirdParty/Community-Supported-Ports/GCC/RP2350_ARM_NTZ/non_secure/port.c:1707:17: error: implicit declaration of function 'xEventGroupSetBitsFromISR'; did you mean 'xEventGroupGetBitsFromISR'? [-Wimplicit-function-declaration]
 1707 |                 xEventGroupSetBitsFromISR( xEventGroup, ulBits, &xHigherPriorityTaskWoken );
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~
      |                 xEventGroupGetBitsFromISR
ninja: build stopped: subcommand failed.
